Fixed a bug where viewing the website on mobile doesn't accept character input in login and signup page

--- a/client/src/Home/Home.css
+++ b/client/src/Home/Home.css
@@ -1,5 +1,5 @@
 * {
-  user-select: none !important;
+  user-select: text !important;
 }
 .home-page {
   display: flex;
